# html

./: .gitmodules  Cargo.toml  README.md
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yaml
crates/css-sys/: Cargo.toml  README.md
crates/html/: Cargo.toml  README.md
crates/html-bindgen/: Cargo.toml  README.md
crates/html-bindgen/src/: generate.rs  generate_sys.rs  lib.rs  parse.rs  scrape.rs  types.rs  utils.rs
crates/html-bindgen/src/generate/: html.rs  mod.rs  sys.rs
crates/html-bindgen/src/generate/html/: builder.rs  mod.rs
crates/html-bindgen/src/generate/sys/: mod.rs
crates/html-bindgen/src/merge/: mod.rs
crates/html-bindgen/src/parse/: aria.rs  elements.rs  mod.rs  webidls.rs
crates/html-bindgen/src/parse/elements/: categories.rs  mod.rs
crates/html-bindgen/src/scrape/: aria.rs  elements.rs  mod.rs  webidls.rs
crates/html-sys/: Cargo.toml  README.md
crates/html/src/: heading.rs  lib.rs
crates/html/src/elements/embedded/: audio.rs  iframe.rs  map.rs  picture.rs  source.rs  track.rs
crates/html/src/elements/forms/: button.rs  fieldset.rs  input.rs  meter.rs  optgroup.rs  option.rs  progress.rs
crates/html/src/elements/interactive/: summary.rs
crates/html/src/elements/metadata/: base.rs  head.rs  link.rs  mod.rs  title.rs
crates/html/src/elements/root/: html.rs
crates/html/src/elements/scripting/: canvas.rs
crates/html/src/elements/sections/: address.rs  article.rs  body.rs  footer.rs  h1.rs  h3.rs  header.rs  hgroup.rs  mod.rs
crates/html/src/elements/tables/: colgroup.rs  mod.rs  table.rs  td.rs  th.rs  tr.rs
crates/html/src/elements/text/: a.rs  abbr.rs  bdo.rs  br.rs  dd.rs  dt.rs  em.rs  hr.rs  kbd.rs  main.rs  mark.rs  p.rs  q.rs  rp.rs  rt.rs  s.rs  small.rs  span.rs  sup.rs  time.rs  u.rs  var.rs  wbr.rs
crates/html/src/manual/: categories.rs  mod.rs
crates/html/src/manual/content/: mod.rs
crates/html/src/manual/edits/: mod.rs
crates/html/src/manual/embedded/: mod.rs
crates/html/src/manual/forms/: mod.rs
crates/html/src/manual/inline_text/: mod.rs
crates/html/src/manual/interactive/: mod.rs
crates/html/src/manual/media/: mod.rs
crates/html/src/manual/metadata/: mod.rs
crates/html/src/manual/root/: mod.rs
crates/html/src/manual/scripting/: mod.rs
crates/html/src/manual/tables/: mod.rs
crates/html/src/manual/text_content/: mod.rs
crates/html/src/manual/web_components/: mod.rs
crates/html/tests/: extend.rs  html-doc.rs  pre.rs  table.rs  test.rs
crates/html_sys/: Cargo.toml
resources/manual/: global_attributes.json  mdn_modules.json  web_sys_modules.json
resources/nodes/: CDATASection.json  DOMImplementation.json  DOMStringMap.json  DOMTokenList.json  DocumentFragment.json  DocumentType.json  HTMLAreaElement.json  HTMLAudioElement.json  HTMLCanvasElement.json  HTMLCollection.json  HTMLDataElement.json  HTMLDirectoryElement.json  HTMLDivElement.json  HTMLEmbedElement.json  HTMLFieldSetElement.json  HTMLFontElement.json  HTMLHRElement.json  HTMLImageElement.json  HTMLLIElement.json  HTMLMediaElement.json  HTMLMenuElement.json  HTMLMeterElement.json  HTMLOListElement.json  HTMLOptGroupElement.json  HTMLOptionElement.json  HTMLOptionsCollection.json  HTMLOutputElement.json  HTMLParagraphElement.json  HTMLQuoteElement.json  HTMLSelectElement.json  HTMLSpanElement.json  HTMLTableCaptionElement.json  HTMLTableElement.json  HTMLTimeElement.json  HTMLTitleElement.json  HTMLUListElement.json  HTMLVideoElement.json  Node.json  SVGElement.json  SVGGraphicsElement.json  (+2 more)
resources/parsed/: CharacterData.json  Comment.json  Document.json  Element.json  HTMLAnchorElement.json  HTMLBRElement.json  HTMLBaseElement.json  HTMLBodyElement.json  HTMLButtonElement.json  HTMLDListElement.json  HTMLDataListElement.json  (+154 more)
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: debug.rs  fetch.rs  generate.rs  main.rs  merge.rs  parse.rs  scrape.rs
(+1367 files in other folders)
