[package]
name = "html-bindgen"
description = "Tool to convert HTML WebIDL files to a structured representation"
license = "Apache-2.0 OR MIT"
version = "0.3.3"
edition = "2021"
documentation = "https://docs.rs/html-bindgen"
homepage = "https://github.com/yoshuawuyts/html"
repository = "https://github.com/yoshuawuyts/html"

[dependencies]
weedle = "0.12.0"
convert_case = "0.6.0"
indoc = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
html5ever = { version = "0.26.0" }
scraper = "0.14.0"
prettyplease = "0.2.4"
syn = "2"
regex = "1"
once_cell = "1"
