[package]
name = "html"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Structured HTML encoder"
documentation = "https://docs.rs/html"
homepage = "https://github.com/yoshuawuyts/html"
repository = "https://github.com/yoshuawuyts/html"

[dependencies]
html-sys = { version = "0.2.0", path = "../html-sys" }
