[package]
name = "html"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Structured HTML encoder"
documentation = "https://docs.rs/html"
homepage = "https://github.com/yoshuawuyts/html"
repository = "https://github.com/yoshuawuyts/html"

[dependencies]
html-sys = { version = "0.4.0", path = "../html-sys" }

[dev-dependencies]
indoc = "2"
pretty_assertions = "1"
